Minor fix
Signed-off-by: Tomoyuki Morita <moritato@amazon.com>